--- a/HTML/dna-coder.html
+++ b/HTML/dna-coder.html
@@ -13,9 +13,11 @@
         <script src="https://kit.fontawesome.com/3c60254cfe.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="navbar">
-            <div class="user-icon"><i class="fa-solid fa-user"></i></div>
-        </div>
+        <ul class="navbar">
+            <li class="nav-item-left nav-title"><a href="">Interactive Bio</a></li>
+            <li class="nav-item-left nav-text"><a href="">Activities</a></li>
+            <li class="nav-item-right nav-text"><a href="">About</a></li>
+        </ul>
 
         <br>
         
