--- a/HTML/dna-coder.html
+++ b/HTML/dna-coder.html
@@ -8,14 +8,14 @@
 
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/dna-coder.css">
-        <link rel="stylesheet" href="../CSS/style.css   ">
+        <link rel="stylesheet" href="../CSS/style.css">
 
         <script src="https://kit.fontawesome.com/3c60254cfe.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <ul class="navbar">
             <li class="nav-item-left nav-title"><a href="">Interactive Bio</a></li>
-            <li class="nav-item-left nav-text"><a href="">Activities</a></li>
+            <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
             <li class="nav-item-right nav-text"><a href="">About</a></li>
         </ul>
 
