Accuracy on dna-coder

--- a/HTML/dna-coder.html
+++ b/HTML/dna-coder.html
@@ -96,6 +96,8 @@
                     <div class="content"></div>
                 </div>
             </div><br>
+            <p class="attempts" style="color: #E7DECC">No Problem Submitted</p>
+            <p class="accuracy" style="color: #E7DECC">No Problem Submitted</p><br>
             <div class="problem"></div><br>
             <p class="allGood" style="display: none;">All good!</p><br>
             <button class="newProblem" onclick="generateProblem()">Generate New Problem</button><br>
