--- a/HTML/dna-coder.html
+++ b/HTML/dna-coder.html
@@ -8,6 +8,8 @@
         Match DNA, match DNA and RNA, and use the translation chart to match up RNA with it's corresponding Amino Acid.">
         <title>DNA Coder</title>
 
+        <link rel="icon" type="image/png" href="../Images/icon.png">
+
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/dna-coder.css">
         <link rel="stylesheet" href="../CSS/style.css">
