--- a/HTML/dna-coder.html
+++ b/HTML/dna-coder.html
@@ -10,6 +10,8 @@
 
         <link rel="icon" type="image/png" href="../Images/icon.png">
 
+        <noscript>Please enable Javascript</noscript>
+
         <link rel="stylesheet" href="../CSS/main-navbar.css">
         <link rel="stylesheet" href="../CSS/dna-coder.css">
         <link rel="stylesheet" href="../CSS/style.css">
