--- a/HTML/dna-coder.html
+++ b/HTML/dna-coder.html
@@ -129,6 +129,7 @@
             </div>
         </div>
        
+        <script src="../src/JS/globals.js"></script>
         <script src="../src/JS/dna-coder.js"></script>
     </body>
 </html>
