--- a/HTML/dna-coder.html
+++ b/HTML/dna-coder.html
@@ -23,7 +23,7 @@
             <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
             <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
         </ul><br><br><br><br>
-        <div class="dna-coder-title">DNA Coder</div><br><br>
+        <div class="activity-title">DNA Coder</div><br><br>
         <div class="center">
             <button class="activateChart" onclick="clickDisplayTranslationChart()">Show Translation Chart</button>
 
